# revdep

./: .gitignore  .mailmap  CHANGES  COPYRIGHT  HACKING.md  Makefile  Makefile.lint  README  README.md  README.pod  TODO  TODO.md  bash_completion  config.mk  debug.mk  elf-cache.cpp  elf-cache.h  elf.cpp  elf.h  finddeps  findredundantdeps  main.cpp  main.h  meson.build  meson.options  oldfiles  pathnames.h  pkg.cpp  pkg.h  pkgexport  pkgexport.1  pkgsize  prtcheck  prtcreate  prtcreate.1  prtorphan  prtrej  prtreverse  prtsweep  prtsweep.1  (+11 more)
.github/workflows/: actions.yml  build.yml  c-cpp.yml  lint.yml  make.yml
PKG/usr/: bin
completion/: Makefile  bash_completion  meson.build
extra/: asan_ubsan.mk  extra_warns.mk  flags-extra.mk  flags-sanitizer.mk
extra/bashcomp/: Makefile
internal/: meson.build
lib/prtverify/: 00_prtverify_lib.awk  05_file_check.awk  20_duplicated_deps.awk  20_encoding.awk  20_evil_cmds.awk  20_maintainer_email.awk  20_missing_deps.awk  20_pkgfile_headers.awk  20_pkgfile_vars.awk  20_port_name_match.awk  20_release_number.awk  30_file_conflict.awk  30_file_permissions.awk  30_filesystem_collisions.awk  30_invalid_dirs.awk  30_junk_files.awk  30_suid_sgid.awk  30_system_users.awk  90_mk_footprint_db.awk  prtverify.wl
man/: .gitignore  Makefile  librevdep.3.scdoc  librevdep.7.scdoc  meson.build  revdep.1  revdep.1.scdoc  revdep.d.5  revdep.d.5.scdoc  revdep_context.3.scdoc  revdep_engine.3.scdoc  revdep_format.3.scdoc  revdep_parallel.3.scdoc  revdep_semantics.7.scdoc
pod/: revdep.1.pod
revdep/: .gitignore  Makefile  elf-cache.h  elf.cpp  elf.h  global.c  global.h  main.c  main.h  package.c  package.h  pkg.cpp  revdep.1  revdep.man  utility.c  utility.cpp  utility.h
src/: .editorconfig  .gitignore  Makefile  elf-cache.cpp  elf-cache.h  elf.cpp  elf.h  elf_cache.cpp  elf_cache.h  main.cpp  meson.build  pathnames.h  pkg.cpp  pkg.h  revdep.cpp  utility.cpp  utility.h
src/librevdep/: .gitignore  Makefile  elf.cpp  elf.h  elf_cache.cpp  elf_cache.h  librevdep.h  pkg.cpp  pkg.h  revdep_context.h  revdep_engine.cpp  revdep_engine.h  revdep_format.cpp  revdep_format.h  revdep_parallel.cpp  revdep_parallel.h  utility.cpp  utility.h
