option('link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How revdep links against librevdep')

option('build_man',
  type: 'boolean',
  value: true,
  description: 'Build and install manual pages')

option('revdepd_dir',
  type : 'string',
  value : '/etc/revdep.d',
  description : 'Directory for revdep package configuration')

option('pkgdb_path',
  type : 'string',
  value : '/var/lib/pkg/db',
  description : 'Path to package database file')

option('ldsoconf_path',
  type : 'string',
  value : '/etc/ld.so.conf',
  description : 'Path to dynamic loader configuration file')
