option('link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How revdep links against librevdep')

option('manpages',
  type: 'boolean',
  value: true,
  description: 'Build and install manual pages')

option('bashcomp',
  type: 'boolean',
  value: false,
  description: 'Install bash completion')

option('bashcompdir',
  type: 'string',
  value: '',
  description: 'Install directory for bash completion files')

option('revdepd_dir',
  type: 'string',
  value: '',
  description: 'Directory for revdep package configuration')

option('pkgdb_path',
  type: 'string',
  value: '',
  description: 'Path to package database file')

option('ldsoconf_path',
  type: 'string',
  value: '',
  description: 'Path to dynamic loader configuration file')
